# trufflehog-redactor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_cli.py  test_e2e.py  test_parser.py  test_redactor.py  test_tui.py
trufflehog_redactor/: __init__.py  __main__.py  cli.py  parser.py  redactor.py  tui.py
